Implemented image defaults for portfolio items

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -8,8 +8,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :subtitles %>
-    <%= f.text_field :subtitles %>
+    <%= f.label :subtitle %>
+    <%= f.text_field :subtitle %>
   </div>
 
   <div class="field">
