--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,6 +2,6 @@
 
 <h1><%= @portfolio_item.title %></h1>
 
-<em><%= @portfolio_item.subtitles %></em>
+<em><%= @portfolio_item.subtitle %></em>
 
 <p><%= @portfolio_item.body %></p>
